--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -1,12 +1,19 @@
 #projects {
     background-color: rgb(76,105,119);
+    width: 100%;
     height: 100vh;  
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     align-items: center;
     
 }
 
+#projects h2{
+    
+    float: center;
+    align-items: center;
+    justify-self: center;
+}
 .card {
     position: relative;
     width: 500px;
@@ -18,8 +25,6 @@
     background-color:rgb(98, 126, 139);
     cursor: pointer;
     margin: 10px;
-    /* float: left; */
-    /* flex: 30%; */
     
 }
 
@@ -34,7 +39,20 @@
     transform: translateY(-80px) ;
     z-index:99;
     
+    
 }
+
+.projects {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  
+  width: 100vw;
+  position: absolute;
+  
+  padding-top: 200px;
+  
+}
+
 
 .imgbox img{
     width: 100%;
@@ -58,6 +76,8 @@
 
 .content h2 {
     color: #493737;
+    
+    
 }
 
 .content p {
