--- a/assets/css/aboutme.css
+++ b/assets/css/aboutme.css
@@ -7,15 +7,29 @@
 }
 .about-me{
     display: flex;
-    padding-top: 200px;
-    width: 100%;
-    justify-content: left;
+    /* padding-top: 200px; */
+    width: 100vw;
+   
 }
 
 .about-me-text{
-    background-color: rgb(243, 243, 246);
-    
+    background-color: rgba(243, 243, 246, 0.466);
+    height: 100vh;
     flex-grow: 1;
+    display: grid;
+    grid-template: 1fr 1fr;
+    flex-direction: row;
+    flex-grow: 1;
+    text-align: center;
+    
+
+}
+.title {
+    background-color:rgb(34,33,33);
+    text-align: center;
+    height: 452px;
+    padding: 0;
+    color: blanchedalmond;
 }
 
 h2 {
@@ -24,10 +38,17 @@ h2 {
     color: rgb(22, 7, 7);
 }
 
-
+ .about-me-icons {
+    display: flex;
+    flex-direction: row;
+}
 .map {
-    width: 500px;
-    margin: auto 0;
+    width: 700px;
+    padding-top: 100px;
+    margin: 0;
+    margin-bottom: 0;
+    
+    
     
     
 }
