--- a/assets/css/aboutme.css
+++ b/assets/css/aboutme.css
@@ -1,7 +1,42 @@
+#image-container {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+  }
+  
+  #image-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    animation: fadeOut 6.5s forwards;
+  }
+  
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  
+  #text-container {
+    display: none;
+  }
+  
+  #text-container.show {
+    display: block;
+  }
+  
+
 #about-me {
     width: 100%;
     height: 100vh;
-    background-color: rgba(192,159,140);
+    background: rgb(192, 159, 140);
+
+    
     
     
 }
@@ -13,7 +48,7 @@
 }
 
 .about-me-text{
-    background-color: rgba(243, 243, 246, 0.466);
+    background-color: rgba(33.5deg, 243, 243, 246, 0.127);
     height: 100vh;
     flex-grow: 1;
     display: grid;
@@ -21,16 +56,17 @@
     flex-direction: row;
     flex-grow: 1;
     text-align: center;
+    background-clip: content-box;
     
 
 }
-.title {
+/* .title {
     background-color:rgb(34,33,33);
     text-align: center;
     height: 452px;
     padding: 0;
     color: blanchedalmond;
-}
+} */
 
 h2 {
     font-family: 'Arial', cursive;
@@ -41,11 +77,15 @@ h2 {
  .about-me-icons {
     display: flex;
     flex-direction: row;
+    justify-items: right;
+    align-items: right;
+    margin-left: 700px;
+    
 }
-.map {
+.map img {
     width: 700px;
     padding-top: 100px;
-    margin: 0;
+    margin-left: 200px;
     margin-bottom: 0;
     
     
