--- a/assets/css/aboutme.css
+++ b/assets/css/aboutme.css
@@ -1,35 +1,35 @@
+Copy code
 #image-container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
+#image-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  animation: fadeOut 6s forwards;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
   }
-  
-  #image-container img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    animation: fadeOut 7s forwards;
+  100% {
+    opacity: 0;
   }
-  
-  @keyframes fadeOut {
-    0% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-    }
-  }
-  
-  #text-container {
-    display: none;
-  }
-  
-  #text-container.show {
-    display: block;
-  }
-  
+}
+
+#text-container {
+  display: none;
+}
+
+#text-container.show {
+  display: block;
+}
 
 #about-me {
     width: 100%;
