--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -102,7 +102,7 @@
     opacity: 0;
 }
 
-.skill1{
+/* .skill1{
     background-image: url(../img/html2.svg);
 }
 
@@ -153,7 +153,7 @@
 
 .skill13 {
     background-image: url(../img/sass2.svg);
-}
+} */
 
 #fundo {
     fill: red;
