--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -49,10 +49,11 @@
 
 .projects {
   display: grid;
-  grid-template-columns: 1fr 1fr ;
+  grid-template-columns: 1fr 1fr 1fr ;
   gap:20px;
   width: 100vw;
-  
+  align-items: center;
+    justify-content: center;
   
   padding-top: 200px;
   
@@ -64,7 +65,9 @@
     
     border-radius: 10px;
     box-shadow: 0px 5px 20px rgba(0,0,0,0.5);
+    
 }
+
 
 .content{
     padding-top: 10px;
