--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -105,7 +105,7 @@ a:hover {
     border-radius: 62px;
 }
 
-.linkedin a {
+#pdfLink a {
     width: 100%;
     padding: 25px 0;
     color: rgb(248,245,245);
