--- a/assets/css/aboutme.css
+++ b/assets/css/aboutme.css
@@ -69,7 +69,7 @@
 } */
 
 h2 {
-    font-family: 'Arial', cursive;
+    font-family: 'Gruppo', sans-serif;
     font-size: 45px;
     color: rgb(22, 7, 7);
 }
