--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -48,7 +48,7 @@
 
 .conteiner-descricao {
     color: white;
-    font-family: 'Arial', serif;
+    font-family: 'Gruppo', sans-serif;
     font-size: 20px;
     max-width: 40%;
 }
