--- a/assets/css/aboutme.css
+++ b/assets/css/aboutme.css
@@ -1,8 +1,8 @@
-#image-container {
+/* #image-container {
     position: relative;
     width: 100%;
     height: 100vh;
-  }
+  } 
   
   #image-container img {
     position: absolute;
@@ -10,16 +10,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    animation: fadeOut 6s forwards;
-  }
-  
-  @keyframes fadeOut {
-    0% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-    }
+    opacity: 1;
+    transition: opacity 7s;
   }
   
   #text-container {
@@ -29,37 +21,85 @@
   #text-container.show {
     display: block;
   }
-  
-
-#about-me {
-    width: 100%;
+   */
+   #about-me {
+    
+    align-items: center;
     height: 100vh;
-    background: rgb(192, 159, 140);
-
+    
+  }       
     
     
-    
+  #text-container {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    /* border: 1px solid #ccc;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2), 0px 0px 20px rgba(0, 0, 0, 0.15); */
+    height: 100vh;
 }
 .about-me{
-    display: flex;
+   
     /* padding-top: 200px; */
     width: 100vw;
+    /* grid-row: 1fr 1r; */
    
 }
 
-.about-me-text{
-    background-color: rgba(33.5deg, 243, 243, 246, 0.127);
-    height: 100vh;
-    flex-grow: 1;
+.about-menu {
     display: grid;
-    grid-template: 1fr 1fr;
-    flex-direction: row;
-    flex-grow: 1;
+    grid-template-columns: auto 1fr;
+    grid-gap: 20px;
+  }
+  
+  .about-me-intro {
+    grid-row: 1 / span 2;
+  }
+  
+  .about-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 800px;
+  }
+  
+  .centered-text {
     text-align: center;
-    background-clip: content-box;
-    
+  }
+  
+  .centered-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+  
 
+.about-me-text {
+    
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    width: 400px;
 }
+  
+  .about-me-avatar {
+    flex: 0 0 auto;
+    margin-right: 20px;
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+  }
+  
+  .about-me-intro {
+    width: 600px;
+  }
+  .about-me-text h2,
+  .about-me-text p {
+    flex: 1;
+  }
+  
 /* .title {
     background-color:rgb(34,33,33);
     text-align: center;
@@ -68,12 +108,15 @@
     color: blanchedalmond;
 } */
 
-h2 {
+.about-me-h2 {
     font-family: 'Gruppo', sans-serif;
     font-size: 45px;
-    color: rgb(22, 7, 7);
+    color: rgb(9, 22, 72);
 }
 
+.about-me-p {
+    text-align: justify;
+}
  .about-me-icons {
     display: flex;
     flex-direction: row;
