--- a/assets/css/aboutme.css
+++ b/assets/css/aboutme.css
@@ -51,17 +51,21 @@
     display: grid;
     grid-template-columns: auto 1fr;
     grid-gap: 20px;
-  }
+    width: fit-content;
+    
+    box-shadow: rgba(246, 225, 125, 0.4) -5px 5px, rgba(246, 225, 125, 0.3) -10px 10px, rgba(246, 225, 125, 0.2) -15px 15px, rgba(246, 225, 125, 0.1) -20px 20px, rgba(246, 225, 125, 0.05) -25px 25px;
+}
+      
+      
   
-  .about-me-intro {
-    grid-row: 1 / span 2;
-  }
+  
+
   
   .about-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 800px;
+    /* height: 800px; */
   }
   
   .centered-text {
@@ -108,6 +112,10 @@
     color: blanchedalmond;
 } */
 
+.about-me-h1{
+   text-align: center;
+   padding: 10px;
+}
 .about-me-h2 {
     font-family: 'Gruppo', sans-serif;
     font-size: 45px;
