--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -170,7 +170,7 @@ a:hover {
 @media (max-width:1200px) {
     
     #home{
-        background: #352728;
+        background: #e3dcdc;
         height: auto;
     }
 
