--- a/assets/css/aboutme.css
+++ b/assets/css/aboutme.css
@@ -1,18 +1,26 @@
 #about-me {
+    
   align-items: center;
   height: 100vh;
-}
-
+  
+}       
+  
+  
 #text-container {
   display: flex;
   align-content: center;
   justify-content: center;
   align-items: center;
+  /* border: 1px solid #ccc;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2), 0px 0px 20px rgba(0, 0, 0, 0.15); */
   height: 100vh;
 }
-
-.about-me {
+.about-me{
+ 
+  /* padding-top: 200px; */
   width: 100vw;
+  /* grid-row: 1fr 1r; */
+ 
 }
 
 .about-menu {
@@ -23,6 +31,11 @@
   
   box-shadow: rgba(246, 225, 125, 0.4) -5px 5px, rgba(246, 225, 125, 0.3) -10px 10px, rgba(246, 225, 125, 0.2) -15px 15px, rgba(246, 225, 125, 0.1) -20px 20px, rgba(246, 225, 125, 0.05) -25px 25px;
 }
+    
+    
+
+
+
 
 .about-content {
   display: flex;
@@ -33,96 +46,148 @@
 
 .centered-text {
   text-align: center;
+  padding: 20px;
 }
 
-.centered-buttons {
-  display: flex;
-  justify-content: center;
-  gap: 11px;
+
+  .centered-buttons {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 11px;
+    align-items: flex-end;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
+
+
 
 .about-me-text {
+  
   align-items: center;
   flex-direction: column;
   text-align: center;
-  width: 90%;
-  max-width: 400px;
+  width: 400px;
 }
 
 .about-me-avatar {
   flex: 0 0 auto;
   margin-right: 20px;
-  width: 90%;
-  max-width: 400px;
-  height: auto;
+  width: 400px;
+  height: 400px;
   object-fit: cover;
 }
 
 .about-me-intro {
-  width: 90%;
-  max-width: 600px;
+  width: 600px;
 }
-
 .about-me-text h2,
 .about-me-text p {
   flex: 1;
 }
 
-.about-me-h1 {
+/* .title {
+  background-color:rgb(34,33,33);
   text-align: center;
-  padding: 10px;
-}
+  height: 452px;
+  padding: 0;
+  color: blanchedalmond;
+} */
 
+.about-me-h1{
+ text-align: center;
+ padding: 10px;
+}
 .about-me-h2 {
   font-family: 'Gruppo', sans-serif;
-  font-size: 3rem;
+  font-size: 45px;
   color: rgb(9, 22, 72);
-  text-align: center;
-  padding-top: 50px;
 }
 
 .about-me-p {
   text-align: justify;
-  font-size: 1.25rem;
+  margin: 15px;
 }
-
 .about-me-icons {
   display: flex;
   flex-direction: row;
   justify-items: right;
   align-items: right;
-  margin-left: auto;
+  margin-left: 700px;
+  
 }
-
+.map img {
+  width: 700px;
+  padding-top: 100px;
+  margin-left: 200px;
+  margin-bottom: 0;
+  
+  
+  
+  
+}
 @keyframes html {
   0% {
-    bottom: 0;
-    left: 2.5rem;
+      bottom: 0;
+      left: 250px;
   }
   100% {
-    bottom: 0;
-    left: 0.5rem;
+      bottom: 0;
+      left: 50px;
   }
 }
 
 @keyframes css {
   0% {
-    bottom: 0;
-    left: 0.5rem;
+      bottom: 0;
+      left: 50px;
   }
   100% {
-    bottom: 0;
-    left: 2.5rem;
+      bottom: 0;
+      left: 250px;
   }
 }
 
+
+
+
+
 .about-me p {
-  text-indent: 1.5rem;
-  font-size: 1.25rem;
+  text-indent: 30px;
+  font-size: 20px;
   /* max-width: 609.25px; */
   color: rgb(8, 2, 2);
 }
 
+@media (max-width:1200px) {
+  .ajustador-2 {
+      justify-content: center;
+      text-align: center;
+  }
+
+  
+  h2 {
+      font-size: 30px;
+  }
+
+  .ajustador-2 p {
+      font-size: 15px;
+  }
+  .about-me p {
+      text-indent: 0;
+  }
+}
+
+@media(max-width:950px){
+
+  
+  .ajustador-2 {
+      max-width: 350px;
+      padding: 70px 30px;
+  }
+
+  
+}
 
 @media (max-width:1200px) {
     .ajustador-2 {
@@ -155,6 +220,56 @@
 }
   
 @media(max-width:428px){
+  .about-me-avatar {
+    flex: 0 0 auto;
+    width: auto;
+    height: 150px;
+    object-fit: cover;
+}
+
+#text-container {
+  display: flex;
+  flex-direction: column;
+}
+.about-me-p {
+  font-size: 10px;
+  margin: 15px;
+}
+
+.centered-buttons {
+  display: flex;
+  flex-direction: column;
+  margin-left: 15px;
+  
+}
+.about-menu {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.about-me-intro {
+  width: 300px;
+}
+
+.centered-text {
+  text-align: center;
+  padding: 20px;
+}
+
+
+
+.about-me-h2{
+  text-align: center;
+  
+}
+
+#about-me{
+  height: 100vh;
+}
+
+}
+
+@media(max-width:390px){
   .about-me-avatar {
     flex: 0 0 auto;
     width: auto;
