--- a/assets/css/aboutme.css
+++ b/assets/css/aboutme.css
@@ -2,6 +2,7 @@
     
   align-items: center;
   height: 100vh;
+  background-color: white;
   
 }       
   
@@ -20,6 +21,7 @@
   /* padding-top: 200px; */
   width: 100vw;
   /* grid-row: 1fr 1r; */
+  
  
 }
 
@@ -102,6 +104,7 @@
   font-family: 'Gruppo', sans-serif;
   font-size: 45px;
   color: rgb(9, 22, 72);
+  text-align: center;
 }
 
 .about-me-p {
